# rt

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
src/: CIE_XYZ.hpp  CMakeLists.txt  RGB.cpp  RGB.hpp  XYZ.cpp  XYZ.hpp  basic_renderer.hpp  bounds.hpp  float.hpp  geometry.cpp  geometry.hpp  image.hpp  interaction.hpp  main.cpp  normal.hpp  point.hpp  primitive.cpp  primitive.hpp  ray.hpp  renderer.hpp  sRGB.hpp  shape.cpp  shape.hpp  spectrum.hpp  transform.hpp
test/: CMakeLists.txt  test.hpp
